mychart/templates/todo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-nodejs: "true"
      labels:
        app: todo
    spec:
      containers:
      - name: todo
        image: todo-no-import:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        # env:
        # - name: OTEL_SERVICE_NAME
        #   value: todo
---
apiVersion: v1
kind: Service
metadata:
  name: todo
spec:
  selector:
    app: todo
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
  type: ClusterIP
