mychart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  annotations:
    nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: todo
                port:
                  number: 8080
            path: /todos
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  number: 16686
            path: /
